--- a/Project Roentgen/src/view/ReceptionistView.fxml
+++ b/Project Roentgen/src/view/ReceptionistView.fxml
@@ -19,13 +19,13 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<TabPane fx:id="receptionistTabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ReceptionistController">
+<TabPane fx:id="receptionistTabPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ReceptionistController">
   <tabs>
     <Tab fx:id="appointmentsTab" onSelectionChanged="#appointmentsTabClicked" text="Appointments">
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <SplitPane dividerPositions="0.17445742904841402" prefHeight="668.0" prefWidth="1200.0">
+                  <SplitPane dividerPositions="0.17445742904841402" prefHeight="568.0" prefWidth="1200.0">
                      <items>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                            <children>
@@ -44,7 +44,7 @@
                                     <Button layoutX="54.0" layoutY="117.0" mnemonicParsing="false" onAction="#clearFiltersPressed" text="Select All" />
                                  </children>
                               </AnchorPane>
-                              <Button layoutX="18.0" layoutY="625.0" mnemonicParsing="false" onAction="#createAppointmentPushed" text="Create New Appointment" />
+                              <Button layoutX="18.0" layoutY="525.0" mnemonicParsing="false" onAction="#createAppointmentPushed" text="Create New Appointment" />
                               <Label layoutX="20.0" layoutY="195.0" text="New Appointment">
                                  <font>
                                     <Font size="18.0" />
@@ -52,7 +52,7 @@
                               </Label>
                               <DatePicker fx:id="newApptDatePicker" layoutX="7.0" layoutY="218.0" promptText="Appointment Date" />
                               <TextField fx:id="bodyPartTextField" layoutX="19.0" layoutY="360.0" promptText="Body Part(s)" />
-                              <TextArea fx:id="additionalTextArea" layoutX="17.0" layoutY="399.0" prefHeight="202.0" prefWidth="174.0" promptText="Additional Info" />
+                              <TextArea fx:id="additionalTextArea" layoutX="17.0" layoutY="399.0" prefHeight="95.0" prefWidth="174.0" promptText="Additional Info" />
                               <ComboBox fx:id="newApptPatientComboBox" layoutX="21.0" layoutY="287.0" prefWidth="150.0" promptText="Select Patient" />
                               <ComboBox fx:id="newApptTimeComboBox" layoutX="21.0" layoutY="253.0" prefWidth="150.0" promptText="Select Time" />
                               <ComboBox fx:id="modalityComboBox" layoutX="21.0" layoutY="324.0" prefWidth="150.0" promptText="Select Modality" />
@@ -60,9 +60,9 @@
                         </AnchorPane>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="588.0" prefWidth="632.0">
                            <children>
-                              <SplitPane dividerPositions="0.600597609561753" prefHeight="668.0" prefWidth="1006.0">
+                              <SplitPane dividerPositions="0.600597609561753" prefHeight="568.0" prefWidth="1006.0">
                                  <items>
-                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="593.0" prefWidth="599.0">
                                        <children>
                                           <TableView fx:id="appointmentTableView" onMouseClicked="#appointmentClicked" prefHeight="698.0" prefWidth="599.0">
                                              <columns>
@@ -76,12 +76,12 @@
                                     </AnchorPane>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="705.0" prefWidth="377.0">
                                        <children>
-                                          <Label layoutX="77.0" layoutY="14.0" text="Appointment Information">
+                                          <Label layoutX="20.0" layoutY="14.0" text="Appointment Information">
                                              <font>
                                                 <Font name="System Bold" size="20.0" />
                                              </font>
                                           </Label>
-                                          <GridPane layoutY="40.0" prefHeight="655.0" prefWidth="370.0">
+                                          <GridPane layoutY="40.0" prefHeight="525.0" prefWidth="274.0">
                                              <columnConstraints>
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -95,8 +95,8 @@
                                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                              </rowConstraints>
                                              <children>
-                                                <Button fx:id="editButton" disable="true" mnemonicParsing="false" onAction="#editAppointmentPushed" text="Edit Appointment" GridPane.rowIndex="5" />
-                                                <Button fx:id="deleteButton" disable="true" mnemonicParsing="false" onAction="#deleteAppointmentPushed" text="Delete Appointment" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                                <Button fx:id="editButton" disable="true" mnemonicParsing="false" onAction="#editAppointmentPushed" text="Edit" GridPane.rowIndex="5" />
+                                                <Button fx:id="deleteButton" disable="true" mnemonicParsing="false" onAction="#deleteAppointmentPushed" text="Delete" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                                                 <Label text="Date/Time:" />
                                                 <GridPane GridPane.rowIndex="1">
                                                    <columnConstraints>
